# pharia-engine

./: .containerignore  .env.example  .env.test  .env.test.example  .gitignore  .gitlab-ci.yml  .release-please-manifest.json  .release-plz.toml  .trivyignore  Architecture.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Containerfile  Containerfile.mdbook  Containerfile.skill  Dockerfile  LICENSE  OPERATING.md  OperatingPhariaKernel.md  README.md  RELEASE.md  Slides.md  build-skill-go.sh  build-skill-py.sh  build-skill.sh  config.toml  namespace.toml  operator-config.toml  release-please-config.json  remove_at_from_witworld.py  rustfmt.toml  skill_config.toml  triage.toml  update_helm.sh  wasi_snapshot_preview1.reactor-23.0.2.wasm
.github/: dependabot.yml
.github/workflows/: ci.yml  helm.yaml  release-please.yml  release.yml
crates/chat/: Cargo.toml
crates/chat-skill/: Cargo.toml
crates/chat-skill/src/: lib.rs
crates/chat-stream/: Cargo.toml
crates/chat-stream/src/: lib.rs
crates/complete-stream/: Cargo.toml
crates/csi-double/: Cargo.toml
crates/csi-from-metadata/: Cargo.toml
crates/csi-from-metadata/src/: lib.rs
crates/doc-metadata/: Cargo.toml
crates/doc-metadata-skill/: Cargo.toml
crates/doc-metadata-skill/src/: lib.rs
crates/doc-metadata/src/: lib.rs
crates/engine-room/: Cargo.toml
crates/engine-room/benches/: incremental_compilation.rs  output.txt
crates/engine-room/src/: lib.rs
crates/explain/: Cargo.toml
crates/explain-skill/: Cargo.toml
crates/greet-skill/: Cargo.toml
crates/greet-skill-v0_1/: Cargo.toml
crates/greet-skill-v0_1/src/: lib.rs
crates/greet-skill-v0_2/: Cargo.toml
crates/greet-skill-v0_2/src/: lib.rs
crates/greet-skill-v0_3/: Cargo.toml
crates/greet-skill-v0_3/src/: lib.rs
crates/greet-v0_2/: Cargo.toml
crates/greet-v0_3/: Cargo.toml
crates/invalid-output/: Cargo.toml
crates/invalid-output-skill/: Cargo.toml
crates/search/: Cargo.toml
crates/search-skill/: Cargo.toml
crates/search-skill/src/: lib.rs
crates/test-skills/: Cargo.toml
crates/test-skills/src/: lib.rs  mcp.rs  mcp_server.py  skill.rs
dashboard/: pharia-kernel.json
dashboards/: operator.json  skills.json
doc/: book.toml
doc/src/: SUMMARY.md  csi.md  feedback.md  introduction.md  local-setup.md  operating-kernel.md  python-sdk.md  skill-deletion.md  skill-deployment.md  skill-execution.md  skills-development.md  skills.md
doc/theme/: pagetoc-style.css
docs/: operating.md
greet-go/: .gitignore  go.mod  main.go
greet-py/: app.py
greet-py-v0_2/: app.py  skill.wit
greet-py/skill/: __init__.py
greet-skill/: Cargo.toml
greet-skill-v0_1/src/: lib.rs
greet-skill/src/: lib.rs
helm-charts/pharia-kernel/: .helmignore  CHANGELOG.md  Chart.yaml  README.md  out.yaml  values-kind.yaml  values-pre-prod.yaml  values.yaml
pharia-engine/: Cargo.toml
pharia-engine/src/: chunking.rs  config.rs  engine_room.rs  inference.rs  lib.rs  logging.rs  mcp.rs  namespace_watcher.rs  search.rs  skill_cache.rs  skill_loader.rs  skill_runtime.rs  skill_store.rs  tool.rs
pharia-engine/wit/: README.md
pharia-skill/: Cargo.toml
python-skills/greet-py-v0_3/: app.py
python-skills/stream/: app.py
resource_eval/: .env.example  .gitignore  FINDINGS.md  README.md  main.py  pyproject.toml
resource_eval/cmds/: bench.cmds  mem_chunks.cmds  mem_chunks_2.cmds  saturate.cmds  stress.cmds  test_drop.cmds  test_p_execute_all.cmds  test_remove.cmds  test_rust.cmds
resource_eval/logs/: 241023_161626.638_run.log_failed
resource_eval/resource_eval/: __init__.py  cli.py  commands.py  eval_log.py  log_util.py  run_pk.py
resource_eval/sample_py/: __init__.py  skill.py
resource_eval/sample_rs/: Cargo.toml
resource_eval/sample_rs/src/: lib.rs
rust-skills/chat/: Cargo.toml
rust-skills/chat-stream/: Cargo.toml
rust-skills/chat-stream/src/: lib.rs
rust-skills/chat-v0_4/: Cargo.toml
rust-skills/chat-v0_4/src/: lib.rs
rust-skills/chat/src/: lib.rs
rust-skills/complete-stream/: Cargo.toml
rust-skills/complete-with-echo/: Cargo.toml
rust-skills/doc-metadata/: Cargo.toml
rust-skills/explain/: Cargo.toml
rust-skills/explain/src/: lib.rs
rust-skills/greet-v0_2/: Cargo.toml
rust-skills/greet-v0_3/: Cargo.toml
rust-skills/infinite-streaming/: Cargo.toml
rust-skills/invalid-output/: Cargo.toml
rust-skills/search/: Cargo.toml
rust-skills/streaming-output/: Cargo.toml
rust-skills/streaming-output/src/: lib.rs
rust-skills/test-v0_5/: Cargo.toml
rust-skills/tool-invocation/: Cargo.toml
rust-skills/tool-invocation/src/: lib.rs
skills/: Containerfile  README.md
src/: agent_results.rs  authorization.rs  chunking.rs  config.rs  configuration_observer.rs  csi.rs  csi_shell.rs  engine.rs  engine_room.rs  feature_set.rs  hardcoded_skills.rs  http.rs  inference.rs  language_selection.rs  lib.rs  logging.rs  main.rs  mcp.rs  metrics.rs  namespace_watcher.rs  registries.rs  search.rs  shell.rs  skill.rs  skill_cache.rs  skill_configuration.rs  skill_driver.rs  skill_executor.rs  skill_loader.rs  skill_provider.rs  skill_runtime.rs  skill_store.rs  skills.rs  tokenizers.rs  tool.rs  wasm.rs
src/configuration_observer/: actor.rs  config.rs  namespace_description.rs  skill_config.rs
src/csi/: chunking.rs  contextual.rs  no_silver_bullet.txt  raw.rs  search.rs
src/csi_shell/: common.rs  v0_2.rs  v0_3.rs  v1.rs  v2.rs
src/inference/: actor.rs  client.rs  openai.rs  reasoning_extractor.rs  tracing.rs
src/mcp/: actor.rs  client.rs  mcp_tool.rs  routes.rs  store.rs  subscribers.rs
src/namespace_watcher/: actor.rs  config.rs  namespace_description.rs
src/registries/: file.rs  oci.rs
src/search/: actor.rs  client.rs
src/shell/: docs.rs  extractors.rs  index.html  open_api.rs  openapi.rs  state.rs
src/skill_runtime/: routes.rs
tam/: README.md  Readme.md  inference-in-skills.md
test-skills/: Cargo.toml
tests/: integration.rs  test-container.sh  test-image.sh  test-list-skills.sh  test-run-skill.sh  tracing.rs
vulnerability_scan/: ignore.yaml  triage.yaml
wit/: README.md
write-skill/: app.py
(+221 files in other folders)
