[workspace]
members = ["crates/*", "resource_eval/sample_rs", "test-skills"]

[workspace.lints.rust]
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
refining-impl-trait = "warn"
rust-2018-idioms = "warn"
rust-2024-compatibility = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }
# Lint is noisy and we are unlikely to have drop order dependencies
if-let-rescope = "allow"
# Lint is noisy and we are unlikely to have drop order dependencies
tail-expr-drop-order = "allow"

[workspace.lints.clippy]
dbg-macro = "warn"
# While the pass by value may be needless know, one might decide to pass ownership with later
# optimizations in mind. Long story short: Function signatures are interfacs, which may be harder
# to change later, and we might anticpate actually using the ownership in the implementation later,
# even if we do not do so know. IMHO this lint was created without keeping in mind that code needs
# to change. This leads to false positives.
needless-pass-by-value = "allow"
# This is a) not a library and
# b) this leads to false positives if you use unwrap for unreachable errors
missing_panics_doc = "allow"
pedantic = { level = "warn", priority = -1 }
module-name-repetitions = "allow"

[package]
name = "pharia-kernel"
version = "0.7.1"
edition = "2021"
exclude = ["helm-charts", "resource_eval"]

[dependencies]
aleph-alpha-client = "0.15.0"
anyhow = "1.0.95"
async-trait = "0.1.85"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenvy = "0.15.7"
futures = "0.3.31"
oci-client = "0.14.0"
oci-wasm = "0.2.0"
reqwest = "0.12.12"
semver = "1.0.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
toml = "0.8.19"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = [
    "compression-full",
    "cors",
    "decompression-full",
    "fs",
    "sensitive-headers",
    "trace",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0" }
wasmtime = "28.0.1"
wasmtime-wasi = "28.0.1"
wit-parser = "0.223.0"
url = "2.5.4"
thiserror = "2.0.11"
tokenizers = { version = "0.21.0", default-features = false, features = [
    "onig",
    "esaxx_fast",
] }
text-splitter = { version = "0.22.0", features = ["tokenizers"] }
lingua = { version = "1.6.2", default-features = false, features = [
    "english",
    "german",
] }
opentelemetry = "0.27.1"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = { version = "0.27.0", features = [
    "semconv_experimental",
] }
humantime = "2.1.0"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.1", default-features = false, features = [
    "http-listener",
] }
itertools = "0.14.0"
urlencoding = "2.1.3"
config = "0.15.6"
heck = "0.5.0"
humantime-serde = "1.1.1"
derive_more = { version = "1.0.0", features = [
    "constructor",
    "deref",
    "display",
    "into_iterator",
] }
retry-policies = "0.4.0"

[dev-dependencies]
test-skills = { path = "./test-skills" }
fake = "3.1.0"
http-body-util = "0.1.2"
mime = "0.3.17"
rand = "0.8.5"
tempfile = "3.15.0"
# Pinned because of opentelemetry crates
tokio = { version = "1.43.0", features = ["test-util"] }
tokio-test = "0.4.4"
wat = "1.223.0"

[features]
test_inference = []
test_document_index = []
default = ["test_inference", "test_document_index"]

[lints]
workspace = true

[profile.release]
# panic should only be caused by bugs
panic = 'abort'
# link time optimizations
lto = true

[profile.dev.package."*"]
opt-level = 3
