[package]
name = "chat-skill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.89"
serde_json = "1.0.128"
wit-bindgen = "0.34.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
