[package]
name = "doc-metadata"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.96"
serde_json = "1.0.139"
wit-bindgen = "0.39.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
