[package]
name = "engine-room"
version = "0.2.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytesize.workspace = true
moka.workspace = true
tempfile.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
divan = "0.1.21"
test-skills = { path = "../test-skills" }

[lints]
workspace = true

[[bench]]
name = "incremental_compilation"
harness = false
