[package]
name = "engine-room"
version = "0.2.8"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
bytesize = "2.0.1"
moka = { version = "0.12.10", features = ["sync"] }
tempfile = "3.20.0"
tracing = "0.1.41"
wasmtime = { version = "35.0.0", features = ["incremental-cache"] }
wasmtime-wasi = "35.0.0"

[dev-dependencies]
divan = "0.1.21"
test-skills = { path = "../test-skills" }

[lints]
workspace = true

[[bench]]
name = "incremental_compilation"
harness = false
