[package]
name = "greet-skill-v0_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
serde_json = "1.0.124"
wit-bindgen = "0.30.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
