[package]
name = "greet-skill-v0_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.93"
serde_json = "1.0.132"
wit-bindgen = "0.34.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
