[package]
name = "test-skills"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.98"
change-case = "0.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.16", features = ["json", "stream"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = "1.45.1"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["test-util", "rt", "macros"] }

[lints]
workspace = true
