[package]
name = "test-skills"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
change-case = "0.2.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde_json = "1.0.142"
tempfile = "3.20.0"
tokio = "1.47.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["test-util", "rt", "macros"] }

[lints]
workspace = true
