[package]
name = "sample_rs"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.99"
serde_json = "1.0.143"
serde = { version = "1", features = ["derive"] }
wit-bindgen = "0.45.0"
rand = "0.9.2"

[lib]
crate-type = ["cdylib"]
