[package]
name = "chat-v0_4"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.98"
serde_json = "1.0.141"
wit-bindgen = "0.43.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
