[package]
name = "chat"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.99"
serde_json = "1.0.143"
wit-bindgen = "0.46.0"


[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
