[package]
name = "tool-invocation"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wit-bindgen = "0.45.1"
serde_json = "1.0.143"
serde = { version = "1.0.219", features = ["derive"] }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
